--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,3 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
 - master
 
@@ -10,12 +5,24 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+- script: |
+    cd build
+    echo Starting 5.13 build
+    bash --login -c "./generate_qtwasm_image.sh 5.13"
+  displayName: 'Run 5.13 qt wasm build'
 
 - script: |
     cd build
     echo Starting 5.14 build
     bash --login -c "./generate_qtwasm_image.sh 5.14"
-    echo See https://aka.ms/yaml
   displayName: 'Run 5.14 qt wasm build'
+
+- task: Docker@2
+  displayName: Login to Docker Hub
+  inputs:
+    command: login
+    containerRegistry: DockerHubPublic
+
+- script: |
+    for t in $(docker images -f "reference=maukalinow/qtwasm_builder:5.1*" --format "{{.Tag}}"); do     docker push maukalinow/qtwasm_builder:${t}; done
+  displayName: 'Push generated images'
